[gd_scene load_steps=9 format=2]

[ext_resource path="res://Decompte.gd" type="Script" id=1]
[ext_resource path="res://Fleche.gd" type="Script" id=2]
[ext_resource path="res://Art/f_orange.png" type="Texture" id=3]
[ext_resource path="res://Son/cloche.wav" type="AudioStream" id=4]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.945098, 0.509804, 0.94902, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )

[node name="Decompte" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ProgressBarDecompte" type="ProgressBar" parent="."]
material = SubResource( 1 )
margin_right = 200.0
margin_bottom = 10.0
rect_rotation = 270.0
theme = SubResource( 2 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
max_value = 60.0
step = 1.0
percent_visible = false

[node name="TimerDecompte" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="TimerRentrer" type="Timer" parent="."]
wait_time = 40.0
one_shot = true
autostart = true

[node name="TimerRentrer2" type="Timer" parent="."]
wait_time = 50.0
one_shot = true
autostart = true

[node name="Fleche" type="Sprite" parent="."]
position = Vector2( 5, 26 )
texture = ExtResource( 3 )
script = ExtResource( 2 )

[node name="Sonnette" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
max_distance = 5000.0

[connection signal="timeout" from="TimerDecompte" to="." method="_on_TimerDecompte_timeout"]
[connection signal="timeout" from="TimerRentrer" to="Fleche" method="_on_TimerRentrer_timeout"]
[connection signal="timeout" from="TimerRentrer2" to="Fleche" method="_on_TimerRentrer2_timeout"]
